--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "poly-theme",
+  "name": "skin-styles",
   "description": "Extend paper-styles",
-  "main": "poly-theme.html",
+  "main": "skin-styles.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
     "paper-styles": "PolymerElements/paper-styles#^1.1.5"
