--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,8 @@
   "description": "Extend paper-styles",
   "main": "skin-styles.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
-    "paper-styles": "PolymerElements/paper-styles#^1.1.5"
+    "polymer": "Polymer/polymer#^1.7.0",
+    "paper-button": "PolymerElements/paper-button#^1.0.14"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
