--- a/bower.json
+++ b/bower.json
@@ -3,19 +3,14 @@
   "description": "Extend paper-styles",
   "main": "skin-styles.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0-rc.7",
-    "paper-styles": "PolymerElements/paper-styles#2.0-preview"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "paper-styles": "PolymerElements/paper-styles#^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
+    "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
     "web-component-tester": "^6.0.0-prerelease.10",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.11",
-    "paper-button": "PolymerElements/paper-button#2.0-preview"
-  },
-  "resolutions": {
-    "polymer": "^2.0.0-rc.7",
-    "webcomponentsjs": "^1.0.0-rc.10",
-    "paper-button": "2.0-preview"
+    "paper-button": "PolymerElements/paper-button#^2.0.0"
   }
 }
