--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,37 @@
 {
   "name": "skin-styles",
-  "description": "Extend paper-styles",
+  "version": "2.0.0",
+  "license": "BSD-3-Clause",
+  "private": true,
+  "authors": [
+    "The FabricElements Authors"
+  ],
+  "description": "Extend paper-styles with useful styles",
+  "keywords": [
+    "web-components",
+    "polymer",
+    "styles",
+    "FabricElements",
+    "css",
+    "buttons",
+    "typography",
+    "grid",
+    "animations"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:FabricElements/skin-styles.git"
+  },
   "main": "skin-styles.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0-rc.7",
-    "paper-styles": "PolymerElements/paper-styles#2.0-preview"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "paper-styles": "PolymerElements/paper-styles#^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
-    "web-component-tester": "^6.0.0-prerelease.10",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.11",
-    "paper-button": "PolymerElements/paper-button#2.0-preview"
-  },
-  "resolutions": {
-    "polymer": "^2.0.0-rc.7",
-    "webcomponentsjs": "^1.0.0-rc.10",
-    "paper-button": "2.0-preview"
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0"
   }
 }
