--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
+notifications:
+  email: false
 language: node_js
 sudo: false
 node_js: stable
 before_script:
   - npm install -g polymer-cli
-script:
-  - xvfb-run npm run lint --skip-plugin sauce
+  - polymer install
+script: npm run lint
