--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ notifications:
 language: node_js
 sudo: false
 node_js: stable
-before_script:
-  - npm install -g polymer-cli
-  - polymer install
+before_script: npm install -g polymer-cli
 script: npm run lint
+
